# ops

./: Makefile.am  README.md  configure.ac  skin.py
data/: Makefile.am
lib/python/Components/Converter/: Makefile.am
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
tools/: enigma2.sh.in
